ACLOCAL_AMFLAGS = -I ../m4

bin_PROGRAMS = xapiand

xapiand_SOURCES = \
	cartesian.cc \
	cJSON.c \
	cJSON_Utils.c \
	client_base.cc \
	client_binary.cc \
	client_http.cc \
	database.cc \
	database_autocommit.cc \
	database_utils.cc \
	datetime.cc \
	endpoint.cc \
	endpoint_resolver.cc \
	ev/ev.c \
	ev/event.c	 \
	exception.cc \
	fields.cc \
	generate_terms.cc \
	geometry.cc \
	geospatialrange.cc \
	hash/md5.cc \
	hash/sha256.cc \
	haystack.cc \
	htm.cc \
	http_parser.c \
	io_utils.cc \
	length.cc \
	log.cc \
	lz4/lz4.c \
	lz4/lz4frame.c \
	lz4/lz4hc.c \
	lz4/xxhash.c \
	manager.cc \
	msgpack/src/unpack.c \
	msgpack/src/objectc.c \
	msgpack/src/version.c \
	msgpack/src/vrefbuffer.c \
	msgpack/src/zone.c \
	multivalue.cc \
	multivaluekeymaker.cc \
	multivaluerange.cc \
	namegen.cc \
	replicator.cc \
	schema.cc \
	serialise.cc \
	servers/binary.cc \
	servers/discovery.cc \
	servers/http.cc \
	servers/raft.cc \
	servers/server.cc \
	servers/server_base.cc \
	servers/server_binary.cc \
	servers/server_discovery.cc \
	servers/server_http.cc \
	servers/server_raft.cc \
	servers/tcp_base.cc \
	servers/udp_base.cc \
	times.cc \
	utils.cc \
	wkt_parser.cc \
	xapiand.cc

noinst_HEADERS = \
	cartesian.h \
	cJSON.h \
	cJSON_Utils.h \
	client_base.h \
	client_binary.h \
	client_http.h \
	compressor.h \
	database.h \
	database_autocommit.h \
	database_utils.h \
	datetime.h \
	endpoint.h \
	endpoint_resolver.h \
	ev/ev_vars.h \
	ev/ev_wrap.h \
	ev/ev.h \
	ev/ev++.h \
	ev/event.h	 \
	ev/ev_epoll.c \
	ev/ev_kqueue.c \
	ev/ev_poll.c \
	ev/ev_port.c \
	ev/ev_select.c \
	ev/ev_win32.c \
	exception.h \
	fields.h \
	forward_list.h \
	generate_terms.h \
	geometry.h \
	geospatialrange.h \
	hash/md5.h \
	hash/sha256.h \
	haystack.h \
	htm.h \
	http_parser.h \
	io_utils.h \
	length.h \
	log.h \
	lru.h \
	lz4/lz4.h \
	lz4/lz4frame_static.h \
	lz4/lz4frame.h \
	lz4/lz4hc.h \
	lz4/xxhash.h \
	manager.h \
	multivalue.h \
	multivaluekeymaker.h \
	multivaluerange.h \
	namegen.h \
	queue.h \
	rapidjson/error/en.h \
	rapidjson/error/error.h \
	rapidjson/internal/biginteger.h \
	rapidjson/internal/diyfp.h \
	rapidjson/internal/dtoa.h \
	rapidjson/internal/ieee754.h \
	rapidjson/internal/itoa.h \
	rapidjson/internal/meta.h \
	rapidjson/internal/pow10.h \
	rapidjson/internal/stack.h \
	rapidjson/internal/strfunc.h \
	rapidjson/internal/strtod.h \
	rapidjson/internal/swap.h \
	rapidjson/msinttypes/inttypes.h \
	rapidjson/msinttypes/stdint.h \
	rapidjson/allocators.h \
	rapidjson/document.h \
	rapidjson/encodedstream.h \
	rapidjson/encodings.h \
	rapidjson/filereadstream.h \
	rapidjson/filewritestream.h \
	rapidjson/memorybuffer.h \
	rapidjson/memorystream.h \
	rapidjson/pointer.h \
	rapidjson/prettywriter.h \
	rapidjson/rapidjson.h \
	rapidjson/reader.h \
	rapidjson/stringbuffer.h \
	rapidjson/writer.h \
	replicator.h \
	schema.h \
	serialise.h \
	servers/binary.h \
	servers/discovery.h \
	servers/http.h \
	servers/raft.h \
	servers/server.h \
	servers/server_base.h \
	servers/server_binary.h \
	servers/server_discovery.h \
	servers/server_http.h \
	servers/server_raft.h \
	servers/tcp_base.h \
	servers/udp_base.h \
	sparsehash/dense_hash_map \
	sparsehash/dense_hash_set \
	sparsehash/internal \
	sparsehash/internal/densehashtable.h \
	sparsehash/internal/hashtable-common.h \
	sparsehash/internal/libc_allocator_with_realloc.h \
	sparsehash/internal/sparsehashtable.h \
	sparsehash/sparse_hash_map \
	sparsehash/sparse_hash_set \
	sparsehash/sparsetable \
	sparsehash/template_util.h \
	sparsehash/type_traits.h \
	tclap/Arg.h \
	tclap/ArgException.h \
	tclap/ArgTraits.h \
	tclap/CmdLine.h \
	tclap/CmdLineInterface.h \
	tclap/CmdLineOutput.h \
	tclap/Constraint.h \
	tclap/DocBookOutput.h \
	tclap/HelpVisitor.h \
	tclap/IgnoreRestVisitor.h \
	tclap/MultiArg.h \
	tclap/MultiSwitchArg.h \
	tclap/OptionalUnlabeledTracker.h \
	tclap/StandardTraits.h \
	tclap/StdOutput.h \
	tclap/SwitchArg.h \
	tclap/UnlabeledMultiArg.h \
	tclap/UnlabeledValueArg.h \
	tclap/ValueArg.h \
	tclap/ValuesConstraint.h \
	tclap/VersionVisitor.h \
	tclap/Visitor.h \
	tclap/XorHandler.h \
	tclap/ZshCompletionOutput.h \
	threadpool.h \
	times.h \
	utils.h \
	wkt_parser.h \
	worker.h \
	xapiand.h

noinst_HEADERS += \
	msgpack/src/msgpack/pack_define.h \
	msgpack/src/msgpack/pack_template.h \
	msgpack/src/msgpack/unpack_define.h \
	msgpack/src/msgpack/unpack_template.h \
	msgpack/src/msgpack/util.h \
	msgpack/src/msgpack/sysdep.h \
	msgpack/src/msgpack/gcc_atomic.h \
	msgpack/src/msgpack.h \
	msgpack/src/msgpack/sbuffer.h \
	msgpack/src/msgpack/version.h \
	msgpack/src/msgpack/version_master.h \
	msgpack/src/msgpack/vrefbuffer.h \
	msgpack/src/msgpack/zbuffer.h \
	msgpack/src/msgpack/fbuffer.h \
	msgpack/src/msgpack/pack.h \
	msgpack/src/msgpack/unpack.h \
	msgpack/src/msgpack/object.h \
	msgpack/src/msgpack/zone.h

noinst_HEADERS += \
	msgpack/src/msgpack/predef.h \
	msgpack/src/msgpack/predef/make.h \
	msgpack/src/msgpack/predef/platform.h \
	msgpack/src/msgpack/predef/other.h \
	msgpack/src/msgpack/predef/platform/windows_phone.h \
	msgpack/src/msgpack/predef/platform/windows_desktop.h \
	msgpack/src/msgpack/predef/platform/mingw.h \
	msgpack/src/msgpack/predef/platform/windows_store.h \
	msgpack/src/msgpack/predef/platform/windows_runtime.h \
	msgpack/src/msgpack/predef/architecture/x86.h \
	msgpack/src/msgpack/predef/architecture/arm.h \
	msgpack/src/msgpack/predef/architecture/convex.h \
	msgpack/src/msgpack/predef/architecture/parisc.h \
	msgpack/src/msgpack/predef/architecture/sys390.h \
	msgpack/src/msgpack/predef/architecture/x86/32.h \
	msgpack/src/msgpack/predef/architecture/x86/64.h \
	msgpack/src/msgpack/predef/architecture/m68k.h \
	msgpack/src/msgpack/predef/architecture/sys370.h \
	msgpack/src/msgpack/predef/architecture/rs6k.h \
	msgpack/src/msgpack/predef/architecture/mips.h \
	msgpack/src/msgpack/predef/architecture/pyramid.h \
	msgpack/src/msgpack/predef/architecture/alpha.h \
	msgpack/src/msgpack/predef/architecture/superh.h \
	msgpack/src/msgpack/predef/architecture/z.h \
	msgpack/src/msgpack/predef/architecture/blackfin.h \
	msgpack/src/msgpack/predef/architecture/sparc.h \
	msgpack/src/msgpack/predef/architecture/ppc.h \
	msgpack/src/msgpack/predef/architecture/ia64.h \
	msgpack/src/msgpack/predef/other/endian.h \
	msgpack/src/msgpack/predef/language/objc.h \
	msgpack/src/msgpack/predef/language/stdcpp.h \
	msgpack/src/msgpack/predef/language/stdc.h \
	msgpack/src/msgpack/predef/detail/endian_compat.h \
	msgpack/src/msgpack/predef/detail/comp_detected.h \
	msgpack/src/msgpack/predef/detail/platform_detected.h \
	msgpack/src/msgpack/predef/detail/os_detected.h \
	msgpack/src/msgpack/predef/detail/test.h \
	msgpack/src/msgpack/predef/detail/_exception.h \
	msgpack/src/msgpack/predef/detail/_cassert.h \
	msgpack/src/msgpack/predef/version_number.h \
	msgpack/src/msgpack/predef/compiler.h \
	msgpack/src/msgpack/predef/compiler/borland.h \
	msgpack/src/msgpack/predef/compiler/kai.h \
	msgpack/src/msgpack/predef/compiler/hp_acc.h \
	msgpack/src/msgpack/predef/compiler/ibm.h \
	msgpack/src/msgpack/predef/compiler/sgi_mipspro.h \
	msgpack/src/msgpack/predef/compiler/digitalmars.h \
	msgpack/src/msgpack/predef/compiler/llvm.h \
	msgpack/src/msgpack/predef/compiler/sunpro.h \
	msgpack/src/msgpack/predef/compiler/watcom.h \
	msgpack/src/msgpack/predef/compiler/comeau.h \
	msgpack/src/msgpack/predef/compiler/edg.h \
	msgpack/src/msgpack/predef/compiler/pgi.h \
	msgpack/src/msgpack/predef/compiler/microtec.h \
	msgpack/src/msgpack/predef/compiler/metaware.h \
	msgpack/src/msgpack/predef/compiler/palm.h \
	msgpack/src/msgpack/predef/compiler/iar.h \
	msgpack/src/msgpack/predef/compiler/intel.h \
	msgpack/src/msgpack/predef/compiler/clang.h \
	msgpack/src/msgpack/predef/compiler/visualc.h \
	msgpack/src/msgpack/predef/compiler/ekopath.h \
	msgpack/src/msgpack/predef/compiler/gcc_xml.h \
	msgpack/src/msgpack/predef/compiler/compaq.h \
	msgpack/src/msgpack/predef/compiler/dignus.h \
	msgpack/src/msgpack/predef/compiler/tendra.h \
	msgpack/src/msgpack/predef/compiler/greenhills.h \
	msgpack/src/msgpack/predef/compiler/mpw.h \
	msgpack/src/msgpack/predef/compiler/metrowerks.h \
	msgpack/src/msgpack/predef/compiler/diab.h \
	msgpack/src/msgpack/predef/compiler/gcc.h \
	msgpack/src/msgpack/predef/os/unix.h \
	msgpack/src/msgpack/predef/os/bsd.h \
	msgpack/src/msgpack/predef/os/solaris.h \
	msgpack/src/msgpack/predef/os/windows.h \
	msgpack/src/msgpack/predef/os/hpux.h \
	msgpack/src/msgpack/predef/os/macos.h \
	msgpack/src/msgpack/predef/os/os400.h \
	msgpack/src/msgpack/predef/os/beos.h \
	msgpack/src/msgpack/predef/os/aix.h \
	msgpack/src/msgpack/predef/os/bsd/dragonfly.h \
	msgpack/src/msgpack/predef/os/bsd/net.h \
	msgpack/src/msgpack/predef/os/bsd/free.h \
	msgpack/src/msgpack/predef/os/bsd/bsdi.h \
	msgpack/src/msgpack/predef/os/bsd/open.h \
	msgpack/src/msgpack/predef/os/cygwin.h \
	msgpack/src/msgpack/predef/os/irix.h \
	msgpack/src/msgpack/predef/os/ios.h \
	msgpack/src/msgpack/predef/os/amigaos.h \
	msgpack/src/msgpack/predef/os/vms.h \
	msgpack/src/msgpack/predef/os/linux.h \
	msgpack/src/msgpack/predef/os/qnxnto.h \
	msgpack/src/msgpack/predef/os/haiku.h \
	msgpack/src/msgpack/predef/os/android.h \
	msgpack/src/msgpack/predef/architecture.h \
	msgpack/src/msgpack/predef/os.h \
	msgpack/src/msgpack/predef/library.h \
	msgpack/src/msgpack/predef/version.h \
	msgpack/src/msgpack/predef/language.h \
	msgpack/src/msgpack/predef/library/c/_prefix.h \
	msgpack/src/msgpack/predef/library/c/uc.h \
	msgpack/src/msgpack/predef/library/c/gnu.h \
	msgpack/src/msgpack/predef/library/c/vms.h \
	msgpack/src/msgpack/predef/library/c/zos.h \
	msgpack/src/msgpack/predef/library/c.h \
	msgpack/src/msgpack/predef/library/std/_prefix.h \
	msgpack/src/msgpack/predef/library/std/cxx.h \
	msgpack/src/msgpack/predef/library/std/sgi.h \
	msgpack/src/msgpack/predef/library/std/libcomo.h \
	msgpack/src/msgpack/predef/library/std/stdcpp3.h \
	msgpack/src/msgpack/predef/library/std/vacpp.h \
	msgpack/src/msgpack/predef/library/std/stlport.h \
	msgpack/src/msgpack/predef/library/std/dinkumware.h \
	msgpack/src/msgpack/predef/library/std/msl.h \
	msgpack/src/msgpack/predef/library/std/roguewave.h \
	msgpack/src/msgpack/predef/library/std/modena.h \
	msgpack/src/msgpack/predef/library/std.h

noinst_HEADERS += \
	msgpack/src/msgpack.hpp \
	msgpack/src/msgpack/adaptor/adaptor_base.hpp \
	msgpack/src/msgpack/adaptor/array_ref.hpp \
	msgpack/src/msgpack/adaptor/bool.hpp \
	msgpack/src/msgpack/adaptor/boost/fusion.hpp \
	msgpack/src/msgpack/adaptor/boost/msgpack_variant.hpp \
	msgpack/src/msgpack/adaptor/boost/optional.hpp \
	msgpack/src/msgpack/adaptor/boost/string_ref.hpp \
	msgpack/src/msgpack/adaptor/char_ptr.hpp \
	msgpack/src/msgpack/adaptor/check_container_size.hpp \
	msgpack/src/msgpack/adaptor/cpp11/array.hpp \
	msgpack/src/msgpack/adaptor/cpp11/array_char.hpp \
	msgpack/src/msgpack/adaptor/cpp11/array_unsigned_char.hpp \
	msgpack/src/msgpack/adaptor/cpp11/forward_list.hpp \
	msgpack/src/msgpack/adaptor/cpp11/reference_wrapper.hpp \
	msgpack/src/msgpack/adaptor/cpp11/shared_ptr.hpp \
	msgpack/src/msgpack/adaptor/cpp11/tuple.hpp \
	msgpack/src/msgpack/adaptor/cpp11/unique_ptr.hpp \
	msgpack/src/msgpack/adaptor/cpp11/unordered_map.hpp \
	msgpack/src/msgpack/adaptor/cpp11/unordered_set.hpp \
	msgpack/src/msgpack/adaptor/define.hpp \
	msgpack/src/msgpack/adaptor/deque.hpp \
	msgpack/src/msgpack/adaptor/detail/cpp03_define_map.hpp \
	msgpack/src/msgpack/adaptor/detail/cpp03_define_array.hpp \
	msgpack/src/msgpack/adaptor/detail/cpp03_msgpack_tuple.hpp \
	msgpack/src/msgpack/adaptor/detail/cpp11_define_array.hpp \
	msgpack/src/msgpack/adaptor/detail/cpp11_define_map.hpp \
	msgpack/src/msgpack/adaptor/detail/cpp11_msgpack_tuple.hpp \
	msgpack/src/msgpack/adaptor/ext.hpp \
	msgpack/src/msgpack/adaptor/fixint.hpp \
	msgpack/src/msgpack/adaptor/float.hpp \
	msgpack/src/msgpack/adaptor/int.hpp \
	msgpack/src/msgpack/adaptor/list.hpp \
	msgpack/src/msgpack/adaptor/map.hpp \
	msgpack/src/msgpack/adaptor/msgpack_tuple.hpp \
	msgpack/src/msgpack/adaptor/nil.hpp \
	msgpack/src/msgpack/adaptor/pair.hpp \
	msgpack/src/msgpack/adaptor/raw.hpp \
	msgpack/src/msgpack/adaptor/v4raw.hpp \
	msgpack/src/msgpack/adaptor/set.hpp \
	msgpack/src/msgpack/adaptor/string.hpp \
	msgpack/src/msgpack/adaptor/tr1/unordered_map.hpp \
	msgpack/src/msgpack/adaptor/tr1/unordered_set.hpp \
	msgpack/src/msgpack/adaptor/vector.hpp \
	msgpack/src/msgpack/adaptor/vector_bool.hpp \
	msgpack/src/msgpack/adaptor/vector_char.hpp \
	msgpack/src/msgpack/adaptor/vector_unsigned_char.hpp \
	msgpack/src/msgpack/cpp_config.hpp \
	msgpack/src/msgpack/detail/cpp03_zone.hpp \
	msgpack/src/msgpack/detail/cpp11_zone.hpp \
	msgpack/src/msgpack/fbuffer.hpp \
	msgpack/src/msgpack/iterator.hpp \
	msgpack/src/msgpack/meta.hpp \
	msgpack/src/msgpack/object.hpp \
	msgpack/src/msgpack/object_fwd.hpp \
	msgpack/src/msgpack/pack.hpp \
	msgpack/src/msgpack/sbuffer.hpp \
	msgpack/src/msgpack/type.hpp \
	msgpack/src/msgpack/unpack.hpp \
	msgpack/src/msgpack/version.hpp \
	msgpack/src/msgpack/versioning.hpp \
	msgpack/src/msgpack/vrefbuffer.hpp \
	msgpack/src/msgpack/zbuffer.hpp \
	msgpack/src/msgpack/zone.hpp

noinst_HEADERS += \
	msgpack/src/msgpack/preprocessor.hpp \
	msgpack/src/msgpack/preprocessor/dec.hpp \
	msgpack/src/msgpack/preprocessor/slot.hpp \
	msgpack/src/msgpack/preprocessor/wstringize.hpp \
	msgpack/src/msgpack/preprocessor/enum_params_with_defaults.hpp \
	msgpack/src/msgpack/preprocessor/enum.hpp \
	msgpack/src/msgpack/preprocessor/facilities.hpp \
	msgpack/src/msgpack/preprocessor/enum_params_with_a_default.hpp \
	msgpack/src/msgpack/preprocessor/assert_msg.hpp \
	msgpack/src/msgpack/preprocessor/if.hpp \
	msgpack/src/msgpack/preprocessor/variadic.hpp \
	msgpack/src/msgpack/preprocessor/tuple.hpp \
	msgpack/src/msgpack/preprocessor/comma_if.hpp \
	msgpack/src/msgpack/preprocessor/identity.hpp \
	msgpack/src/msgpack/preprocessor/repeat_from_to.hpp \
	msgpack/src/msgpack/preprocessor/arithmetic/dec.hpp \
	msgpack/src/msgpack/preprocessor/arithmetic/mod.hpp \
	msgpack/src/msgpack/preprocessor/arithmetic/inc.hpp \
	msgpack/src/msgpack/preprocessor/arithmetic/mul.hpp \
	msgpack/src/msgpack/preprocessor/arithmetic/detail/div_base.hpp \
	msgpack/src/msgpack/preprocessor/arithmetic/div.hpp \
	msgpack/src/msgpack/preprocessor/arithmetic/sub.hpp \
	msgpack/src/msgpack/preprocessor/arithmetic/add.hpp \
	msgpack/src/msgpack/preprocessor/selection.hpp \
	msgpack/src/msgpack/preprocessor/stringize.hpp \
	msgpack/src/msgpack/preprocessor/seq/enum.hpp \
	msgpack/src/msgpack/preprocessor/seq/pop_back.hpp \
	msgpack/src/msgpack/preprocessor/seq/elem.hpp \
	msgpack/src/msgpack/preprocessor/seq/subseq.hpp \
	msgpack/src/msgpack/preprocessor/seq/to_tuple.hpp \
	msgpack/src/msgpack/preprocessor/seq/for_each_i.hpp \
	msgpack/src/msgpack/preprocessor/seq/to_list.hpp \
	msgpack/src/msgpack/preprocessor/seq/size.hpp \
	msgpack/src/msgpack/preprocessor/seq/replace.hpp \
	msgpack/src/msgpack/preprocessor/seq/push_front.hpp \
	msgpack/src/msgpack/preprocessor/seq/variadic_seq_to_seq.hpp \
	msgpack/src/msgpack/preprocessor/seq/to_array.hpp \
	msgpack/src/msgpack/preprocessor/seq/seq.hpp \
	msgpack/src/msgpack/preprocessor/seq/fold_left.hpp \
	msgpack/src/msgpack/preprocessor/seq/detail/split.hpp \
	msgpack/src/msgpack/preprocessor/seq/detail/binary_transform.hpp \
	msgpack/src/msgpack/preprocessor/seq/push_back.hpp \
	msgpack/src/msgpack/preprocessor/seq/first_n.hpp \
	msgpack/src/msgpack/preprocessor/seq/for_each.hpp \
	msgpack/src/msgpack/preprocessor/seq/pop_front.hpp \
	msgpack/src/msgpack/preprocessor/seq/fold_right.hpp \
	msgpack/src/msgpack/preprocessor/seq/for_each_product.hpp \
	msgpack/src/msgpack/preprocessor/seq/insert.hpp \
	msgpack/src/msgpack/preprocessor/seq/cat.hpp \
	msgpack/src/msgpack/preprocessor/seq/rest_n.hpp \
	msgpack/src/msgpack/preprocessor/seq/remove.hpp \
	msgpack/src/msgpack/preprocessor/seq/transform.hpp \
	msgpack/src/msgpack/preprocessor/seq/reverse.hpp \
	msgpack/src/msgpack/preprocessor/seq/filter.hpp \
	msgpack/src/msgpack/preprocessor/max.hpp \
	msgpack/src/msgpack/preprocessor/repeat_from_to_2nd.hpp \
	msgpack/src/msgpack/preprocessor/repetition/enum_trailing_binary_params.hpp \
	msgpack/src/msgpack/preprocessor/repetition/enum_params_with_defaults.hpp \
	msgpack/src/msgpack/preprocessor/repetition/enum.hpp \
	msgpack/src/msgpack/preprocessor/repetition/enum_params_with_a_default.hpp \
	msgpack/src/msgpack/preprocessor/repetition/repeat_from_to.hpp \
	msgpack/src/msgpack/preprocessor/repetition/enum_binary_params.hpp \
	msgpack/src/msgpack/preprocessor/repetition/deduce_z.hpp \
	msgpack/src/msgpack/preprocessor/repetition/enum_shifted_params.hpp \
	msgpack/src/msgpack/preprocessor/repetition/enum_shifted.hpp \
	msgpack/src/msgpack/preprocessor/repetition/enum_params.hpp \
	msgpack/src/msgpack/preprocessor/repetition/enum_trailing.hpp \
	msgpack/src/msgpack/preprocessor/repetition/detail/msvc/for.hpp \
	msgpack/src/msgpack/preprocessor/repetition/detail/edg/for.hpp \
	msgpack/src/msgpack/preprocessor/repetition/detail/for.hpp \
	msgpack/src/msgpack/preprocessor/repetition/detail/dmc/for.hpp \
	msgpack/src/msgpack/preprocessor/repetition/repeat.hpp \
	msgpack/src/msgpack/preprocessor/repetition/deduce_r.hpp \
	msgpack/src/msgpack/preprocessor/repetition/for.hpp \
	msgpack/src/msgpack/preprocessor/repetition/enum_trailing_params.hpp \
	msgpack/src/msgpack/preprocessor/repetition/enum_shifted_binary_params.hpp \
	msgpack/src/msgpack/preprocessor/control/expr_iif.hpp \
	msgpack/src/msgpack/preprocessor/control/if.hpp \
	msgpack/src/msgpack/preprocessor/control/detail/msvc/while.hpp \
	msgpack/src/msgpack/preprocessor/control/detail/while.hpp \
	msgpack/src/msgpack/preprocessor/control/detail/edg/while.hpp \
	msgpack/src/msgpack/preprocessor/control/detail/dmc/while.hpp \
	msgpack/src/msgpack/preprocessor/control/iif.hpp \
	msgpack/src/msgpack/preprocessor/control/expr_if.hpp \
	msgpack/src/msgpack/preprocessor/control/while.hpp \
	msgpack/src/msgpack/preprocessor/control/deduce_d.hpp \
	msgpack/src/msgpack/preprocessor/control.hpp \
	msgpack/src/msgpack/preprocessor/iteration/detail/finish.hpp \
	msgpack/src/msgpack/preprocessor/iteration/detail/bounds/lower3.hpp \
	msgpack/src/msgpack/preprocessor/iteration/detail/bounds/upper2.hpp \
	msgpack/src/msgpack/preprocessor/iteration/detail/bounds/lower1.hpp \
	msgpack/src/msgpack/preprocessor/iteration/detail/bounds/upper4.hpp \
	msgpack/src/msgpack/preprocessor/iteration/detail/bounds/lower4.hpp \
	msgpack/src/msgpack/preprocessor/iteration/detail/bounds/lower2.hpp \
	msgpack/src/msgpack/preprocessor/iteration/detail/bounds/lower5.hpp \
	msgpack/src/msgpack/preprocessor/iteration/detail/bounds/upper1.hpp \
	msgpack/src/msgpack/preprocessor/iteration/detail/bounds/upper5.hpp \
	msgpack/src/msgpack/preprocessor/iteration/detail/bounds/upper3.hpp \
	msgpack/src/msgpack/preprocessor/iteration/detail/start.hpp \
	msgpack/src/msgpack/preprocessor/iteration/detail/iter/reverse1.hpp \
	msgpack/src/msgpack/preprocessor/iteration/detail/iter/forward2.hpp \
	msgpack/src/msgpack/preprocessor/iteration/detail/iter/forward3.hpp \
	msgpack/src/msgpack/preprocessor/iteration/detail/iter/reverse4.hpp \
	msgpack/src/msgpack/preprocessor/iteration/detail/iter/reverse2.hpp \
	msgpack/src/msgpack/preprocessor/iteration/detail/iter/forward4.hpp \
	msgpack/src/msgpack/preprocessor/iteration/detail/iter/reverse5.hpp \
	msgpack/src/msgpack/preprocessor/iteration/detail/iter/forward5.hpp \
	msgpack/src/msgpack/preprocessor/iteration/detail/iter/reverse3.hpp \
	msgpack/src/msgpack/preprocessor/iteration/detail/iter/forward1.hpp \
	msgpack/src/msgpack/preprocessor/iteration/detail/rlocal.hpp \
	msgpack/src/msgpack/preprocessor/iteration/detail/local.hpp \
	msgpack/src/msgpack/preprocessor/iteration/detail/self.hpp \
	msgpack/src/msgpack/preprocessor/iteration/local.hpp \
	msgpack/src/msgpack/preprocessor/iteration/self.hpp \
	msgpack/src/msgpack/preprocessor/iteration/iterate.hpp \
	msgpack/src/msgpack/preprocessor/comparison.hpp \
	msgpack/src/msgpack/preprocessor/punctuation/comma_if.hpp \
	msgpack/src/msgpack/preprocessor/punctuation/paren_if.hpp \
	msgpack/src/msgpack/preprocessor/punctuation/is_begin_parens.hpp \
	msgpack/src/msgpack/preprocessor/punctuation/comma.hpp \
	msgpack/src/msgpack/preprocessor/punctuation/detail/is_begin_parens.hpp \
	msgpack/src/msgpack/preprocessor/punctuation/remove_parens.hpp \
	msgpack/src/msgpack/preprocessor/punctuation/paren.hpp \
	msgpack/src/msgpack/preprocessor/slot/slot.hpp \
	msgpack/src/msgpack/preprocessor/slot/detail/shared.hpp \
	msgpack/src/msgpack/preprocessor/slot/detail/slot1.hpp \
	msgpack/src/msgpack/preprocessor/slot/detail/slot2.hpp \
	msgpack/src/msgpack/preprocessor/slot/detail/slot3.hpp \
	msgpack/src/msgpack/preprocessor/slot/detail/def.hpp \
	msgpack/src/msgpack/preprocessor/slot/detail/counter.hpp \
	msgpack/src/msgpack/preprocessor/slot/detail/slot4.hpp \
	msgpack/src/msgpack/preprocessor/slot/detail/slot5.hpp \
	msgpack/src/msgpack/preprocessor/slot/counter.hpp \
	msgpack/src/msgpack/preprocessor/enum_shifted_params.hpp \
	msgpack/src/msgpack/preprocessor/config/config.hpp \
	msgpack/src/msgpack/preprocessor/config/limits.hpp \
	msgpack/src/msgpack/preprocessor/enum_shifted.hpp \
	msgpack/src/msgpack/preprocessor/enum_params.hpp \
	msgpack/src/msgpack/preprocessor/repeat_3rd.hpp \
	msgpack/src/msgpack/preprocessor/comma.hpp \
	msgpack/src/msgpack/preprocessor/seq.hpp \
	msgpack/src/msgpack/preprocessor/inc.hpp \
	msgpack/src/msgpack/preprocessor/debug/error.hpp \
	msgpack/src/msgpack/preprocessor/debug/assert.hpp \
	msgpack/src/msgpack/preprocessor/debug/line.hpp \
	msgpack/src/msgpack/preprocessor/selection/max.hpp \
	msgpack/src/msgpack/preprocessor/selection/min.hpp \
	msgpack/src/msgpack/preprocessor/detail/is_nullary.hpp \
	msgpack/src/msgpack/preprocessor/detail/check.hpp \
	msgpack/src/msgpack/preprocessor/detail/split.hpp \
	msgpack/src/msgpack/preprocessor/detail/null.hpp \
	msgpack/src/msgpack/preprocessor/detail/is_unary.hpp \
	msgpack/src/msgpack/preprocessor/detail/is_binary.hpp \
	msgpack/src/msgpack/preprocessor/detail/dmc/auto_rec.hpp \
	msgpack/src/msgpack/preprocessor/detail/auto_rec.hpp \
	msgpack/src/msgpack/preprocessor/punctuation.hpp \
	msgpack/src/msgpack/preprocessor/array/enum.hpp \
	msgpack/src/msgpack/preprocessor/array/pop_back.hpp \
	msgpack/src/msgpack/preprocessor/array/elem.hpp \
	msgpack/src/msgpack/preprocessor/array/data.hpp \
	msgpack/src/msgpack/preprocessor/array/to_tuple.hpp \
	msgpack/src/msgpack/preprocessor/array/to_list.hpp \
	msgpack/src/msgpack/preprocessor/array/size.hpp \
	msgpack/src/msgpack/preprocessor/array/replace.hpp \
	msgpack/src/msgpack/preprocessor/array/push_front.hpp \
	msgpack/src/msgpack/preprocessor/array/detail/get_data.hpp \
	msgpack/src/msgpack/preprocessor/array/to_seq.hpp \
	msgpack/src/msgpack/preprocessor/array/push_back.hpp \
	msgpack/src/msgpack/preprocessor/array/pop_front.hpp \
	msgpack/src/msgpack/preprocessor/array/insert.hpp \
	msgpack/src/msgpack/preprocessor/array/remove.hpp \
	msgpack/src/msgpack/preprocessor/array/reverse.hpp \
	msgpack/src/msgpack/preprocessor/logical.hpp \
	msgpack/src/msgpack/preprocessor/min.hpp \
	msgpack/src/msgpack/preprocessor/debug.hpp \
	msgpack/src/msgpack/preprocessor/repeat.hpp \
	msgpack/src/msgpack/preprocessor/expand.hpp \
	msgpack/src/msgpack/preprocessor/limits.hpp \
	msgpack/src/msgpack/preprocessor/expr_if.hpp \
	msgpack/src/msgpack/preprocessor/iteration.hpp \
	msgpack/src/msgpack/preprocessor/while.hpp \
	msgpack/src/msgpack/preprocessor/repetition.hpp \
	msgpack/src/msgpack/preprocessor/repeat_2nd.hpp \
	msgpack/src/msgpack/preprocessor/arithmetic.hpp \
	msgpack/src/msgpack/preprocessor/list/enum.hpp \
	msgpack/src/msgpack/preprocessor/list/to_tuple.hpp \
	msgpack/src/msgpack/preprocessor/list/for_each_i.hpp \
	msgpack/src/msgpack/preprocessor/list/size.hpp \
	msgpack/src/msgpack/preprocessor/list/to_array.hpp \
	msgpack/src/msgpack/preprocessor/list/fold_left.hpp \
	msgpack/src/msgpack/preprocessor/list/append.hpp \
	msgpack/src/msgpack/preprocessor/list/detail/fold_left.hpp \
	msgpack/src/msgpack/preprocessor/list/detail/edg/fold_left.hpp \
	msgpack/src/msgpack/preprocessor/list/detail/edg/fold_right.hpp \
	msgpack/src/msgpack/preprocessor/list/detail/fold_right.hpp \
	msgpack/src/msgpack/preprocessor/list/detail/dmc/fold_left.hpp \
	msgpack/src/msgpack/preprocessor/list/to_seq.hpp \
	msgpack/src/msgpack/preprocessor/list/first_n.hpp \
	msgpack/src/msgpack/preprocessor/list/for_each.hpp \
	msgpack/src/msgpack/preprocessor/list/at.hpp \
	msgpack/src/msgpack/preprocessor/list/fold_right.hpp \
	msgpack/src/msgpack/preprocessor/list/for_each_product.hpp \
	msgpack/src/msgpack/preprocessor/list/cat.hpp \
	msgpack/src/msgpack/preprocessor/list/rest_n.hpp \
	msgpack/src/msgpack/preprocessor/list/transform.hpp \
	msgpack/src/msgpack/preprocessor/list/adt.hpp \
	msgpack/src/msgpack/preprocessor/list/reverse.hpp \
	msgpack/src/msgpack/preprocessor/list/filter.hpp \
	msgpack/src/msgpack/preprocessor/comparison/less_equal.hpp \
	msgpack/src/msgpack/preprocessor/comparison/less.hpp \
	msgpack/src/msgpack/preprocessor/comparison/not_equal.hpp \
	msgpack/src/msgpack/preprocessor/comparison/equal.hpp \
	msgpack/src/msgpack/preprocessor/comparison/greater.hpp \
	msgpack/src/msgpack/preprocessor/comparison/greater_equal.hpp \
	msgpack/src/msgpack/preprocessor/repeat_from_to_3rd.hpp \
	msgpack/src/msgpack/preprocessor/array.hpp \
	msgpack/src/msgpack/preprocessor/variadic/elem.hpp \
	msgpack/src/msgpack/preprocessor/variadic/to_tuple.hpp \
	msgpack/src/msgpack/preprocessor/variadic/to_list.hpp \
	msgpack/src/msgpack/preprocessor/variadic/size.hpp \
	msgpack/src/msgpack/preprocessor/variadic/to_array.hpp \
	msgpack/src/msgpack/preprocessor/variadic/detail/is_single_return.hpp \
	msgpack/src/msgpack/preprocessor/variadic/to_seq.hpp \
	msgpack/src/msgpack/preprocessor/cat.hpp \
	msgpack/src/msgpack/preprocessor/for.hpp \
	msgpack/src/msgpack/preprocessor/tuple/enum.hpp \
	msgpack/src/msgpack/preprocessor/tuple/pop_back.hpp \
	msgpack/src/msgpack/preprocessor/tuple/elem.hpp \
	msgpack/src/msgpack/preprocessor/tuple/to_list.hpp \
	msgpack/src/msgpack/preprocessor/tuple/size.hpp \
	msgpack/src/msgpack/preprocessor/tuple/replace.hpp \
	msgpack/src/msgpack/preprocessor/tuple/rem.hpp \
	msgpack/src/msgpack/preprocessor/tuple/push_front.hpp \
	msgpack/src/msgpack/preprocessor/tuple/to_array.hpp \
	msgpack/src/msgpack/preprocessor/tuple/detail/is_single_return.hpp \
	msgpack/src/msgpack/preprocessor/tuple/to_seq.hpp \
	msgpack/src/msgpack/preprocessor/tuple/push_back.hpp \
	msgpack/src/msgpack/preprocessor/tuple/pop_front.hpp \
	msgpack/src/msgpack/preprocessor/tuple/insert.hpp \
	msgpack/src/msgpack/preprocessor/tuple/remove.hpp \
	msgpack/src/msgpack/preprocessor/tuple/eat.hpp \
	msgpack/src/msgpack/preprocessor/tuple/reverse.hpp \
	msgpack/src/msgpack/preprocessor/list.hpp \
	msgpack/src/msgpack/preprocessor/logical/bool.hpp \
	msgpack/src/msgpack/preprocessor/logical/or.hpp \
	msgpack/src/msgpack/preprocessor/logical/compl.hpp \
	msgpack/src/msgpack/preprocessor/logical/xor.hpp \
	msgpack/src/msgpack/preprocessor/logical/bitnor.hpp \
	msgpack/src/msgpack/preprocessor/logical/nor.hpp \
	msgpack/src/msgpack/preprocessor/logical/not.hpp \
	msgpack/src/msgpack/preprocessor/logical/bitor.hpp \
	msgpack/src/msgpack/preprocessor/logical/bitxor.hpp \
	msgpack/src/msgpack/preprocessor/logical/and.hpp \
	msgpack/src/msgpack/preprocessor/logical/bitand.hpp \
	msgpack/src/msgpack/preprocessor/empty.hpp \
	msgpack/src/msgpack/preprocessor/library.hpp \
	msgpack/src/msgpack/preprocessor/facilities/identity.hpp \
	msgpack/src/msgpack/preprocessor/facilities/is_empty.hpp \
	msgpack/src/msgpack/preprocessor/facilities/apply.hpp \
	msgpack/src/msgpack/preprocessor/facilities/is_empty_variadic.hpp \
	msgpack/src/msgpack/preprocessor/facilities/is_empty_or_1.hpp \
	msgpack/src/msgpack/preprocessor/facilities/intercept.hpp \
	msgpack/src/msgpack/preprocessor/facilities/detail/is_empty.hpp \
	msgpack/src/msgpack/preprocessor/facilities/expand.hpp \
	msgpack/src/msgpack/preprocessor/facilities/overload.hpp \
	msgpack/src/msgpack/preprocessor/facilities/is_1.hpp \
	msgpack/src/msgpack/preprocessor/facilities/empty.hpp \
	msgpack/src/msgpack/preprocessor/iterate.hpp

EXTRA_DIST = Xapiand.xcodeproj/project.pbxproj

AM_LDFLAGS = $(XAPIAN_LIBS)

AM_CXXFLAGS = $(XAPIAN_CXXFLAGS)
